# gallery-api

./: .env  .gitignore  .python-version  Dockerfile  Dockerfile-local  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: aws.yml  black.yml
db/: Dockerfile  init.sh  tmp.sql
gallery/: init.json
gallery/gallery/: celery.py  settings.py  urls.py  wsgi.py
gallery/images/: admin.py  cron.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
gallery/images/migrations/: 0001_initial.py  0002_auto_20200226_1200.py  0003_like.py  0004_auto_20200512_1528.py  0005_auto_20200512_1555.py  0006_image_date.py  0007_auto_20200609_1457.py  0008_auto_20200705_0831.py  0009_auto_20200705_0901.py  0010_auto_20200815_0651.py  0011_auto_20201001_1453.py  0012_auto_20201011_1040.py
supervisor/: gallery_celery.conf  gallery_celerybeat.conf
